--- a/src/style/Changepassword.css
+++ b/src/style/Changepassword.css
@@ -1,279 +1,231 @@
-.chnagepassowrd-sub-container{
-    border: 1px solid #e2e2e4;
-    position: relative;
-    /* right: 172px; */
-    /* bottom: -16px; */
-    width: 64.2rem;
-    height: -9%;
-    border-radius: 13px;
-    top: 119px;
-    background-color: #fcfcff;
-    height: 45.6rem;
-    right: 5rem;
+.chnagepassowrd-sub-container {
+  border: 1px solid #e2e2e4;
+  position: relative;
+  /* right: 172px; */
+  /* bottom: -16px; */
+  width: 64.2rem;
+  height: -9%;
+  border-radius: 13px;
+  top: 119px;
+  background-color: #fcfcff;
+  height: 45.6rem;
+  right: 5rem;
 
-    display: flex;
-
+  display: flex;
 }
 
-.Profile-img{
-    
-    margin-left: 10.5rem;
-    margin-top: 0.5rem;
-
+.Profile-img {
+  margin-left: 10.5rem;
+  margin-top: 0.5rem;
 }
 
-.uploading-text{
-    margin-left: 9.2rem;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 20px;
-    letter-spacing: 0em;
-    text-align: left;
-    
+.uploading-text {
+  margin-left: 9.2rem;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
-.maximum-size-text{
-  
-    margin-left: 8.5rem;
+.maximum-size-text {
+  margin-left: 8.5rem;
 
-
-font-size: 12px;
-font-weight: 400;
-line-height: 22px;
-letter-spacing: 0em;
-text-align: left;
-
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
+.profile-picture-section {
+  width: 27rem;
+  height: 10rem;
 
-.profile-picture-section{
-    width: 27rem;
-    height: 10rem;
-
-    border-radius: 10px;
-    border: 1px solid #E2E2E4;
-    background-color: #F7F7F7;
-    margin-top: 3rem;
-
+  border-radius: 10px;
+  border: 1px solid #e2e2e4;
+  background-color: #f7f7f7;
+  margin-top: 3rem;
 }
 
-.right-side-chnagepassowrd{
-    margin-top: 2.1rem;
-    margin-left: 3.1rem;
+.right-side-chnagepassowrd {
+  margin-top: 2.1rem;
+  margin-left: 3.1rem;
 }
 
-
-.Addcompany-Topnavbar-client-profile-2{
-    position: absolute;
-    left: 244px;
-  }
-
-
-
-
-.left-chnagepassowrd-side{
-    margin-left: 36px;
+.Addcompany-Topnavbar-client-profile-2 {
+  position: absolute;
+  left: 244px;
 }
 
-
-
-
-.Billing-profile-heading-2{
-    position: relative;
-    margin-top: 27px;
-
-    left: 197px;
-    color: black;
-    width: 16.6rem;
-    color: #5d982e;
-    /* border-bottom: 3px #5d982e solid; */
-    text-decoration: underline;
+.left-chnagepassowrd-side {
+  margin-left: 36px;
 }
 
+.Billing-profile-heading-2 {
+  position: relative;
+  margin-top: 27px;
 
-
-
-.changepassword-profile-heading{
-    position: relative;
-    margin-top: 71px;
-    left: 197px;
-    color: black;
-    width: 16.6rem;
-    color: #5d982e;
-    /* border-bottom: 3px #5d982e solid; */
-    text-decoration: underline;
+  left: 197px;
+  color: black;
+  width: 16.6rem;
+  color: #5d982e;
+  /* border-bottom: 3px #5d982e solid; */
+  text-decoration: underline;
 }
 
-
-
-.Change-passowrd-cp{
-    width: 27rem;
-    height: 40px;
-    background-color: #5D982E;
-    color: white;
-    margin-top: 20px;
-
-    border: 1px solid #5D982E ;
-    border-radius: 10px;
-    cursor: pointer;
+.changepassword-profile-heading {
+  position: relative;
+  margin-top: 71px;
+  left: 197px;
+  color: black;
+  width: 16.6rem;
+  color: #5d982e;
+  /* border-bottom: 3px #5d982e solid; */
+  text-decoration: underline;
 }
 
-.sumbit-change-password{
-    width: 27rem;
-    height: 40px;
-    background-color: #5D982E;
-    color: white;
-    margin-top: 20px;
+.Change-passowrd-cp {
+  width: 27rem;
+  height: 40px;
+  background-color: #5d982e;
+  color: white;
+  margin-top: 20px;
 
-    border: 1px solid #5D982E ;
-    border-radius: 10px;
-    cursor: pointer;
+  border: 1px solid #5d982e;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.sumbit-change-password {
+  width: 27rem;
+  height: 40px;
+  background-color: #5d982e;
+  color: white;
+  margin-top: 20px;
+
+  border: 1px solid #5d982e;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
 @media (max-width: 1680px) {
-
-    .chnagepassowrd-sub-container{
-        right: 2.9rem;
-
-    }
-
- 
+  .chnagepassowrd-sub-container {
+    right: 2.9rem;
+  }
 }
 
-
 @media (max-width: 1440px) {
-
-
-    .addcompany-profile-heading {
-      
+  .addcompany-profile-heading {
     left: 18.3rem;
+  }
+  .Addcompany-Topnavbar-client-profile-2 {
+    position: absolute;
+    left: 107px;
+  }
 
-    }
-    .Addcompany-Topnavbar-client-profile-2 {
-        position: absolute;
-        left: 107px;
-    }
+  .Addingcompany-sub-container {
+    left: 11.7rem;
+  }
 
-
-    .Addingcompany-sub-container {
-        left: 11.7rem;
-
-    }
-
-    .chnagepassowrd-sub-container{
-        right: 5rem;
-
-
-    }
+  .chnagepassowrd-sub-container {
+    right: 5rem;
+  }
 }
 
 @media (max-width: 1366px) {
-    .chnagepassowrd-sub-container {
-        border: 1px solid #e2e2e4;
+  .chnagepassowrd-sub-container {
+    border: 1px solid #e2e2e4;
     position: relative;
-  
-
-
-
     display: flex;
-  
-    }
+    top: -110%;
+  }
 
-    .chnagepassowrd-sub-container{
-        left: 11.8rem;
-        width: 64rem;
+  .chnagepassowrd-sub-container {
+    left: 18.9rem;
+    width: 64rem;
+  }
 
-    }
+  .changepassword-profile-heading {
+    position: absolute;
+    margin-top: 71px;
+    left: 29rem;
+    color: black;
+    /* width: 66rem; */
+    color: #5d982e;
+    /* border-bottom: 3px #5d982e solid; */
+    text-decoration: underline;
+  }
+  .Addcompany-Topnavbar-client-profile-2 {
+    left: 268px;
+  }
 
-    .changepassword-profile-heading {
-        position: absolute;
-        margin-top: 71px;
-        left: 29rem;
-        color: black;
-        /* width: 66rem; */
-        color: #5d982e;
-        /* border-bottom: 3px #5d982e solid; */
-        text-decoration: underline;
-    }
-    .Addcompany-Topnavbar-client-profile-2{
-     left: 268px;
-    }
+  .addcompany-profile-heading {
+    position: absolute;
 
-    .addcompany-profile-heading {
-        position: absolute;
-   
-        left: 28.7rem;
-        color: black;
-        width: 20%;
-    }
+    left: 28.7rem;
+    color: black;
+    width: 20%;
+  }
 }
-
 
 @media (max-width: 1280px) {
-    .Addingcompany-sub-container {
-        border: 1px solid #e2e2e4;
+  .Addingcompany-sub-container {
+    border: 1px solid #e2e2e4;
     position: relative;
-  
-
-
-
     display: flex;
-  
-    }
+  }
 
-    .changepassword-profile-heading {
-      
-        left: 22rem;
-   
-    }
+  .chnagepassowrd-sub-container {
+    border: 1px solid #e2e2e4;
+    position: relative;
+    display: flex;
+    top: 19%;
+    left: 11.6rem;
+  }
 
-    .Addcompany-Topnavbar-client-profile-2{
-     left: 157px;
-    }
+  .changepassword-profile-heading {
+    left: 22rem;
+  }
 
-    .addcompany-profile-heading {
-        position: absolute;
-   
-        left: 21.7rem;
-        color: black;
-        width: 20%;
-    }
+  .Addcompany-Topnavbar-client-profile-2 {
+    left: 157px;
+  }
+
+  .addcompany-profile-heading {
+    position: absolute;
+
+    left: 21.7rem;
+    color: black;
+    width: 20%;
+  }
 }
 
+@media (max-width: 1024px) {
+  .addcompany-profile-heading {
+    width: 25%;
+    margin-top: 4.3rem;
+  }
 
+  .chnagepassowrd-sub-container {
+    left: 21.8rem;
+    width: 64rem;
+    position: absolute;
+  }
+  .heading-ist {
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+    /* margin-left: 22px; */
+    margin-top: 14px;
+    color: #6a6c6f;
+    width: 141%;
+  }
 
-
-@media (max-width: 1024px){
-    .addcompany-profile-heading {
-        width: 25%;
-        margin-top: 4.3rem;
-    
-    }
-
-    .chnagepassowrd-sub-container {
-        left: 21.8rem;
-        width: 64rem;
-        position: absolute;
-    }
-    .heading-ist {
-        font-family: Poppins;
-        font-size: 16px;
-        font-weight: 600;
-        line-height: 24px;
-        letter-spacing: 0em;
-        text-align: left;
-        /* margin-left: 22px; */
-        margin-top: 14px;
-        color: #6A6C6F;
-        width: 141%;
-    }
-
-    .Addingcompany-sub-container {
-        margin-top: 3.8rem;
-      
-        
-    }
+  .Addingcompany-sub-container {
+    margin-top: 3.8rem;
+  }
 }
-
-
-
