--- a/src/style/CompanyList.css
+++ b/src/style/CompanyList.css
@@ -46,9 +46,9 @@
   margin-bottom: 40px;
 }
 
-.AddingcompanyList-sub-container {
+/* .AddingcompanyList-sub-container {
   position: relative;
-}
+} */
 
 .button-company-screen {
   position: absolute;
@@ -414,6 +414,11 @@
     left: 12rem;
   }
 
+  .service-list-row{
+    top: -112%;
+    left: 7.5rem;
+  }
+
   .company-box-2 {
     display: flex;
     flex-wrap: wrap;
@@ -431,8 +436,8 @@
     border: 1px solid #e2e2e4;
     background-color: #fcfcfc;
     position: relative;
-    top: 143px;
-    left: 358px;
+    top: -95%;
+    left: 470px;
     border-radius: 10px;
     padding-left: 100px;
   }
