--- a/src/style/Companyprofile.css
+++ b/src/style/Companyprofile.css
@@ -1,14 +1,13 @@
-.company-Topnavbar-client-profile-2{
+.company-Topnavbar-client-profile-2 {
   position: absolute;
   left: 244px;
 }
-.company-proile-border{
-    height: 100vh;
+.company-proile-border {
+  height: 100vh;
 }
-.company-sub-container{
+.company-sub-container {
   border: 1px solid #e2e2e4;
   position: relative;
-
   left: 19.2%;
   bottom: 23px;
   width: 1010px;
@@ -18,13 +17,9 @@
   scrollbar-color: #5d982e white;
   scrollbar-width: thin;
   scroll-behavior: smooth;
-
 }
 
-
-
-
-.company-profile-addbtn{
+.company-profile-addbtn {
   position: absolute;
   left: 67%;
 
@@ -32,35 +27,34 @@
   padding: 9px;
   background-color: white;
   color: black;
-  border: 1px solid #E2E2E4;
+  border: 1px solid #e2e2e4;
   border-radius: 8px;
   cursor: pointer;
 }
 
-
-.company-prolie-boxes{
+.company-prolie-boxes {
   display: flex;
   column-gap: 18px;
   flex-wrap: wrap;
 }
 
-.company-All-boxes{
+.company-All-boxes {
   position: relative;
   right: 139px;
   bottom: 80px;
   font-size: 12px;
 }
 
-.company-prolie-boxes-2{
+.company-prolie-boxes-2 {
   display: flex;
   column-gap: 18px;
 }
 
-.company-prolie-boxes-3{
+.company-prolie-boxes-3 {
   display: flex;
   column-gap: 18px;
 }
-.Box-10{
+.Box-10 {
   border: 1px solid #e2e2e4;
   width: 354px;
   height: 224px;
@@ -69,10 +63,9 @@
   left: 10.1rem;
   margin-top: 103px;
   border-radius: 16px;
-
 }
 
-.Box-11{
+.Box-11 {
   border: 1px solid #e2e2e4;
   width: 315px;
   height: 224px;
@@ -84,7 +77,7 @@
   border-radius: 16px;
 }
 
-.Box-12{
+.Box-12 {
   border: 1px solid #e2e2e4;
   width: 309px;
   height: 224px;
@@ -95,7 +88,7 @@
   border-radius: 16px;
 }
 
-.Box-13{
+.Box-13 {
   border: 1px solid #e2e2e4;
   width: 309px;
   height: 224px;
@@ -106,7 +99,7 @@
   border-radius: 16px;
 }
 
-.Box-14{
+.Box-14 {
   border: 1px solid #e2e2e4;
   width: 309px;
   height: 224px;
@@ -117,20 +110,7 @@
   border-radius: 16px;
 }
 
-.Box-15{
-  border: 1px solid #e2e2e4;
-  width: 309px;
-  height: 224px;
-  gap: 8px;
-  position: relative;
-  left: 161px;
-  margin-top: 19px;
-  border-radius: 16px;
-    
-}
-
-
-.Box-16{
+.Box-15 {
   border: 1px solid #e2e2e4;
   width: 309px;
   height: 224px;
@@ -141,7 +121,7 @@
   border-radius: 16px;
 }
 
-.Box-17{
+.Box-16 {
   border: 1px solid #e2e2e4;
   width: 309px;
   height: 224px;
@@ -152,7 +132,7 @@
   border-radius: 16px;
 }
 
-.Box-18{
+.Box-17 {
   border: 1px solid #e2e2e4;
   width: 309px;
   height: 224px;
@@ -162,7 +142,18 @@
   margin-top: 19px;
   border-radius: 16px;
 }
-.company-Name{
+
+.Box-18 {
+  border: 1px solid #e2e2e4;
+  width: 309px;
+  height: 224px;
+  gap: 8px;
+  position: relative;
+  left: 161px;
+  margin-top: 19px;
+  border-radius: 16px;
+}
+.company-Name {
   margin-left: 22px;
   margin-top: 15px;
   margin-bottom: 12px;
@@ -172,7 +163,7 @@
   padding-left: 12px;
 }
 
-.company-caseid{
+.company-caseid {
   margin-left: 22px;
   margin-top: 15px;
   margin-bottom: 12px;
@@ -182,7 +173,7 @@
   padding-left: 12px;
 }
 
-.company-ApplicationType{
+.company-ApplicationType {
   margin-left: 22px;
   margin-top: 15px;
   margin-bottom: 12px;
@@ -192,7 +183,7 @@
   padding-left: 12px;
 }
 
-.company-Applicationstatus{
+.company-Applicationstatus {
   margin-left: 22px;
   margin-top: 15px;
   margin-bottom: 12px;
@@ -202,13 +193,13 @@
   padding-left: 12px;
 }
 
-.comapnayprofile-main-container{
+.comapnayprofile-main-container {
   display: flex;
   margin-left: 127px;
   flex-wrap: wrap;
 }
 
-.company-Client-inputs{
+.company-Client-inputs {
   border: none;
   margin-left: 6px;
   width: 146px;
@@ -217,20 +208,19 @@
   user-select: none;
 }
 
-.company-Vector-line{
-    position: relative;
-    left: 3px;
-    top: 7px;;
+.company-Vector-line {
+  position: relative;
+  left: 3px;
+  top: 7px;
 }
 
-.company-profile-heading{
+.company-profile-heading {
   position: relative;
   left: 384px;
-  color:black;
+  color: black;
   bottom: 48px;
   width: 22%;
 }
-
 
 .company-profile-heading::after {
   content: "";
@@ -241,100 +231,97 @@
   display: block;
 }
 
-
 .company-profile-heading:hover,
 .company-profile-headingg:active {
   color: #5d982e;
 }
 
 @media (max-width: 1680px) {
-
   .company-profile-addbtn {
     left: 80.3rem;
+  }
 }
-
-
-} 
-
 
 @media (max-width: 1440px) {
-   
-  .company-Topnavbar-client-profile-2  {
+  .company-Topnavbar-client-profile-2 {
     position: absolute;
     left: 106px;
-}
-.comapnayprofile-main-container {
-  display: flex;
-  max-width: 1990px;
-  margin: 0 auto;
-  height: 100vh;
-  margin-left: -12px;
-}
-
-.company-profile-addbtn {
- 
-  left: 71.6rem;
-
-}
-
-
-    } 
-
-
-
-    @media (max-width: 1366px) {
-   
-      .company-Topnavbar-client-profile-2 {
-        position: absolute;
-        left: 268px;
-    }
-    .comapnayprofile-main-container {
-      display: flex;
-      max-width: 1990px;
-      margin: 0 auto;
-      height: 100vh;
-      margin-left: 150px;
   }
-    
-  .company-profile-addbtn  {
+  .comapnayprofile-main-container {
+    display: flex;
+    max-width: 1990px;
+    margin: 0 auto;
+    height: 100vh;
+    margin-left: -12px;
+  }
+
+  .company-profile-addbtn {
+    left: 71.6rem;
+  }
+}
+
+@media (max-width: 1366px) {
+  .company-sub-container {
+    top: -107.5%;
+    left: 30%;
+  }
+
+  .profile-route-cp{
+    top: -7.7%;
+    left: 17rem;
+    position: absolute;
+  }
+
+  .company-Topnavbar-client-profile-2 {
+    position: absolute;
+    left: 268px;
+  }
+  .comapnayprofile-main-container {
+    display: flex;
+    max-width: 1990px;
+    margin: 0 auto;
+    height: 100vh;
+    margin-left: 150px;
+  }
+
+  .company-profile-addbtn {
     left: 81.3rem;
     width: 11rem;
-    
-    }
-
-
-        } 
-
-
-        @media (max-width: 1280px){
-          .company-profile-addbtn{
-            left: 92%;
-        
-    width: 12rem;
-        }
-
-      .company-Topnavbar-client-profile-2 {
-        position: absolute;
-        left: 157px;
-    }
-    .comapnayprofile-main-container {
-      display: flex;
-      max-width: 1990px;
-      margin: 0 auto;
-      height: 100vh;
-      margin-left: 40px;
   }
- 
-        }
+}
 
-        @media (max-width: 1024px){
-    
+@media (max-width: 1280px) {
+  .company-profile-addbtn {
+    left: 92%;
+    width: 12rem;
+  }
 
-    
+  .profile-route-cp{
+    top: -2.8rem;
+    left: 0rem;
+    position: relative;
+  }
 
-      .company-profile-addbtn  {
-        left: 114%;
-        width: 191px;
-    }
-        }
+  .company-Topnavbar-client-profile-2 {
+    position: absolute;
+    left: 157px;
+  }
+  .comapnayprofile-main-container {
+    display: flex;
+    max-width: 1990px;
+    margin: 0 auto;
+    height: 100vh;
+    margin-left: 40px;
+  }
+  .company-sub-container {
+    top: 0%;
+    left: 18%;
+  }
+}
 
+@media (max-width: 1024px) {
+  .company-profile-addbtn {
+    left: 114%;
+    width: 191px;
+  }
+}
