--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   font-family:monospace;
   font-size:16px;
   line-height:2;
-  overflow: hidden;
+  transform: scale(0.9);
 }
 
 .react-datepicker__month-container{
