--- a/src/style/Sidenavbar.css
+++ b/src/style/Sidenavbar.css
@@ -4,13 +4,16 @@
   border-radius: 20px;
   background-color: #fcfcfc;
   border: 1px solid #e2e2e4;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   /* width: 7%; */
-  height: fit-content;
-  left: 144px;
-  top: 16px;
+  /* height: fit-content; */
+  /* left: 144px; */
+  /* top: 16px; */
   width: 7.2rem;
-
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  align-self: stretch;
 }
 
 .icons-sidebar{
@@ -23,6 +26,15 @@
   align-items: center;
   position: relative;
   min-width: 7.2rem;
+  justify-content: space-between;
+}
+
+.icons-sidebar-sec-a{
+ 
+  display: flex;
+  flex-direction: column;
+  gap: 2.2rem;
+  align-items: center;
 }
 
 .Logo{
