--- a/src/style/Notification.css
+++ b/src/style/Notification.css
@@ -63,7 +63,7 @@
   display: flex;
   max-width: 1990px;
   margin: 0 auto;
-  height: 100vh;
+  /* height: 100vh; */
 }
 .Notification-heading {
   position: relative;
@@ -288,7 +288,7 @@
     display: flex;
     max-width: 1990px;
     margin: 0 auto;
-    height: 100vh;
+    /* height: 100vh; */
     margin-left: 127px;
   }
 }
@@ -301,7 +301,7 @@
     display: flex;
     max-width: 1990px;
     margin: 0 auto;
-    height: 100vh;
+    /* height: 100vh; */
 
     margin-left: -12px;
   }
@@ -312,7 +312,7 @@
     display: flex;
     max-width: 1990px;
     margin: 0 auto;
-    height: 100vh;
+    /* height: 100vh; */
     margin-left: 150px;
   }
 }
@@ -322,7 +322,7 @@
     display: flex;
     max-width: 1990px;
     margin: 0 auto;
-    height: 100vh;
+    /* height: 100vh; */
     margin-left: 40px;
   }
 }
