--- a/src/style/Sidenavbar.css
+++ b/src/style/Sidenavbar.css
@@ -19,6 +19,7 @@
 .icons-sidebar{
   width: 100%;
   height: 100%;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   gap: 2.2rem;
