--- a/src/style/Caseworker.css
+++ b/src/style/Caseworker.css
@@ -4,7 +4,7 @@
     left: 244px;
   }
   .Caseworker-proile-border{ 
-      height: 100vh;
+      /* height: 100vh; */
   }
   .caseworkerproile-sub-container{
     border: 1px solid #e2e2e4;
