--- a/src/style/Calender.css
+++ b/src/style/Calender.css
@@ -30,6 +30,10 @@
     background-color: #e2e1dc;
   } */
 
+  .css-919eu4 {
+    background-color: transparent !important;
+  }
+
   .css-1d3z3hw-MuiOutlinedInput-notchedOutline {
     border: none !important;
     border-bottom: 1px solid rgba(0, 0, 0, 0.14) !important;
