--- a/src/style/Messagesimple.css
+++ b/src/style/Messagesimple.css
@@ -11,12 +11,11 @@
   background-color: #fff;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   height: 561px;
-  position: relative;
-  left: 24.5%;
   width: 100%;
   max-width: 25rem;
-  top: 18rem;
+  margin-top: 25px;
   border-radius: 11px;
+  margin-bottom: 20px;
 }
 
 .Message-date-time-second {
@@ -462,7 +461,6 @@
   align-items: center;
   border-radius: 11px;
   position: relative;
-  width: 400px;
   top: 8px;
 }
 
