--- a/src/style/CLientprofile.css
+++ b/src/style/CLientprofile.css
@@ -210,7 +210,7 @@
     display: flex;
     max-width: 1990px;
     margin: 0 auto;
-    height: 100vh;
+    /* height: 100vh; */
 
     margin-left: 127px;
 
@@ -283,7 +283,7 @@
       display: flex;
       max-width: 1990px;
       margin: 0 auto;
-      height: 100vh;
+      /* height: 100vh; */
       margin-left: -12px;
     }
     
@@ -304,7 +304,7 @@
       display: flex;
       max-width: 1990px;
       margin: 0 auto;
-      height: 100vh;
+      /* height: 100vh; */
       margin-left: 150px;
   }
     
@@ -331,7 +331,7 @@
           display: flex;
           max-width: 1990px;
           margin: 0 auto;
-          height: 100vh;
+          /* height: 100vh; */
           margin-left: 40px;
       }
         
