--- a/src/style/SectionA.css
+++ b/src/style/SectionA.css
@@ -1,6 +1,7 @@
 
 .SectionA-container{
     display: flex;
+
 }
 
 .calender{
@@ -12,7 +13,6 @@
   min-width: 19%;
   width: 47%;
   height: 148px;
-  right: 74px;
   cursor: pointer;
   display: flex;
   flex-direction: column;
@@ -30,7 +30,6 @@
   min-width: 19%;
   width: 47%;
   height: 148px;
-  right: 54px;
   cursor: pointer;
   display: flex;
   flex-direction: column;
@@ -50,7 +49,6 @@
   min-width: 19%;
   width: 47%;
   height: 148px;
-  right: 34px;
   cursor: pointer;
   display: flex;
   flex-direction: column;
@@ -70,7 +68,6 @@
   width: 47%;
   height: 149px;
   cursor: pointer;
-  right: 14px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -88,7 +85,6 @@
   min-width: 20%;
   width: 48%;
   height: 148px;
-  left: 8px;
   cursor: pointer;
    display: flex;
   flex-direction: column;
@@ -192,13 +188,6 @@
   top: 26px; */
 }
 
-.SectionA-container{
-  margin-top: 112px;
-  position: relative;
-  right: 55.6rem;
-  min-width: 59rem;
-  width: 59rem;
-}
 
 
 
@@ -211,13 +200,9 @@
 
 @media (max-width: 1920px) {
   .SectionA-container{
-    right: 249%;
-    width: 265%;
-    width: 413%;
-    min-width: 265%;
-    margin-top: 125px;
-        display: flex;
-    justify-content: center;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
 }
   }
