--- a/src/style/Changepassword.css
+++ b/src/style/Changepassword.css
@@ -6,10 +6,8 @@
   width: 64.2rem;
   height: -9%;
   border-radius: 13px;
-  top: 119px;
   background-color: #fcfcff;
   height: 45.6rem;
-  right: 5rem;
 
   display: flex;
 }
@@ -75,14 +73,12 @@
 }
 
 .changepassword-profile-heading {
-  position: relative;
-  margin-top: 71px;
-  left: 197px;
   color: black;
   width: 16.6rem;
   color: #5d982e;
   /* border-bottom: 3px #5d982e solid; */
   text-decoration: underline;
+  margin: 10px 0px;
 }
 
 .Change-passowrd-cp {
@@ -111,7 +107,7 @@
 
 @media (max-width: 1680px) {
   .chnagepassowrd-sub-container {
-    right: 2.9rem;
+    /* right: 2.9rem; */
   }
 }
 
@@ -125,11 +121,10 @@
   }
 
   .Addingcompany-sub-container {
-    left: 11.7rem;
   }
 
   .chnagepassowrd-sub-container {
-    right: 5rem;
+    /* right: 5rem; */
   }
 }
 
@@ -138,18 +133,15 @@
     border: 1px solid #e2e2e4;
     position: relative;
     display: flex;
-    top: -110%;
+    /* top: -110%; */
   }
 
   .chnagepassowrd-sub-container {
-    left: 18.9rem;
+    /* left: 18.9rem; */
     width: 64rem;
   }
 
   .changepassword-profile-heading {
-    position: absolute;
-    margin-top: 71px;
-    left: 29rem;
     color: black;
     /* width: 66rem; */
     color: #5d982e;
@@ -185,7 +177,6 @@
   }
 
   .changepassword-profile-heading {
-    left: 22rem;
   }
 
   .Addcompany-Topnavbar-client-profile-2 {
@@ -226,6 +217,5 @@
   }
 
   .Addingcompany-sub-container {
-    margin-top: 3.8rem;
   }
 }
