--- a/src/style/prescreening.css
+++ b/src/style/prescreening.css
@@ -43,9 +43,7 @@
 
 .case-worker-selector {
   width: 24.7rem;
-  height: 7.3rem;
   border-radius: 20px;
-  position: relative;
   border: 1px solid #e2e2e4;
   left: 51.3rem;
 
@@ -133,7 +131,7 @@
   flex-direction: row;
   justify-content: space-between;
 
-  margin-left: 299px;
+  margin-left: 150px;
   margin-top: 13px;
   position: absolute;
 }
@@ -268,9 +266,6 @@
   height: 43.3rem;
   border-radius: 20px;
   border: 1px solid #e2e2e4;
-  position: absolute;
-  left: 22.5%;
-  top: 154px;
   overflow-x: hidden;
   scrollbar-color: #5d982e white;
   scrollbar-width: thin;
@@ -280,6 +275,7 @@
   flex-direction: column;
   gap: 20px;
   align-items: center;
+  margin-top: 15px;
 }
 
 .preescreen-form {
@@ -537,7 +533,6 @@
 
 @media (max-width: 1680px) {
   .preescreen-form-main {
-    left: 27rem;
   }
   .add-to-q-img{
     top: 0.4rem;
@@ -556,7 +551,6 @@
   }
 
   .preescreen-form-main {
-    left: 18.6rem;
   }
 
   .prescreening-container {
@@ -591,7 +585,6 @@
   }
 
   .preescreen-form-main {
-    left: 33.3%;
   }
 
   .prescreening-container {
@@ -621,7 +614,6 @@
 
 @media (max-width: 1280px) {
   .preescreen-form-main {
-    left: 21.5rem;
   }
 
   .prescreening-container {
@@ -654,7 +646,6 @@
   }
 
   .preescreen-form-main {
-    left: 34%;
   }
 
   .four-routes-images {
